feat: Enhance footer with social media links and additional navigation sections for improved user experience

--- a/src/content/legal/liability-waiver.mdx
+++ b/src/content/legal/liability-waiver.mdx
@@ -16,21 +16,29 @@ Aunque estoy aprendiendo de forma constante y comparto información basada en cu
 
 Este blog no promueve ni incentiva el consumo excesivo de alcohol. Recomiendo siempre beber con moderación y ser consciente de los efectos del alcohol en la salud y en la vida social y familiar. **Si tienes problemas con el consumo de alcohol, busca ayuda profesional.**
 
-### 3. Alergias e intolerancias
+### 3. Advertencia sobre consumo de alcohol
+
+Todo el contenido publicado en Agítalo Suave está destinado a personas mayores de edad. Las recetas, consejos y experiencias relacionadas con bebidas alcohólicas tienen fines informativos, recreativos y personales.
+
+El autor no promueve el consumo irresponsable de alcohol ni sugiere que sea apropiado para todos los públicos. Se espera que cada lector actúe con responsabilidad y cumpla con la edad legal para consumir alcohol según las leyes de su país o jurisdicción.
+
+El acceso y uso del contenido implica que confirmas tener la edad legal correspondiente.
+
+### 4. Alergias e intolerancias
 
 Algunas recetas pueden contener ingredientes que causan alergias o intolerancias. Es responsabilidad del lector verificar si los componentes de una receta son seguros para su consumo personal.
 
-### 4. Seguridad y manipulación
+### 5. Seguridad y manipulación
 
 Toda preparación, mezcla o manipulación de ingredientes debe hacerse con sentido común, higiene y cuidado. El autor no se hace responsable por daños derivados del mal uso de la información publicada.
 
-### 5. Ensayo, error y expectativas
+### 6. Ensayo, error y expectativas
 
 La coctelería es, en muchos casos, un proceso de prueba. Puede que una receta no te salga bien a la primera, que el sabor no sea lo que esperabas o incluso que te caiga mal algún ingrediente. Eso también forma parte del aprendizaje.
 
 **No me hago responsable si el trago no te gusta, no queda como pensabas o si decides repetirlo con media botella de más.** Aquí comparto lo que a mí me funciona, esperando que lo tomes con calma y curiosidad.
 
-### 6. Enlaces y menciones externas
+### 7. Enlaces y menciones externas
 
 Si se mencionan marcas, productos o herramientas, no implica afiliación o patrocinio, salvo que se indique expresamente. Los enlaces a sitios de terceros se incluyen solo con fines informativos.
 
