--- a/src/content/legal/privacy-policy.mdx
+++ b/src/content/legal/privacy-policy.mdx
@@ -12,14 +12,20 @@ En **Agítalo Suave**, tu privacidad es importante. Esta política describe qué
 
 Este blog es un proyecto personal creado y gestionado por mí, con fines informativos y recreativos relacionados con la coctelería casera.
 
-### 2. Qué datos se recopilan
+### 2. Público objetivo
+
+Este sitio está dirigido exclusivamente a personas mayores de edad, según la legislación vigente en su país de residencia. El contenido relacionado con bebidas alcohólicas es de carácter informativo y recreativo, y no está destinado a menores de edad.
+
+Agítalo Suave no recopila ni procesa intencionalmente información personal de menores. Si eres menor de edad, te pedimos que no utilices este sitio ni envíes ningún dato a través de nuestros formularios de contacto.
+
+### 3. Qué datos se recopilan
 
 En este sitio se recopilan datos de forma limitada, y solo en los siguientes casos:
 
 - **Formulario de contacto**: si decides escribirme, se recopilan tu nombre y correo electrónico. Esta información no se comparte ni se usa con fines comerciales.
 - **Cookies de terceros**: si utilizo herramientas como Google Analytics, se pueden recopilar datos de navegación de forma anónima (por ejemplo, qué páginas visitas, desde qué país accedes, etc.).
 
-### 3. Cómo se usan los datos
+### 4. Cómo se usan los datos
 
 Los datos se utilizan exclusivamente para:
 
@@ -28,17 +34,17 @@ Los datos se utilizan exclusivamente para:
 
 No vendo, cedo ni comparto tus datos con terceros, salvo obligación legal.
 
-### 4. Enlaces a otros sitios
+### 5. Enlaces a otros sitios
 
 Este blog puede contener enlaces a sitios externos (por ejemplo, recursos sobre coctelería o redes sociales). No soy responsable de las políticas de privacidad de esos sitios.
 
 
-### 5. Derechos del usuario
+### 6. Derechos del usuario
 
 Puedes solicitar en cualquier momento la modificación o eliminación de tus datos personales si los has compartido conmigo voluntariamente (por ejemplo, por formulario de contacto).
 
 
-### 6. Cambios en esta política
+### 7. Cambios en esta política
 
 Puedo actualizar esta política en el futuro. La fecha de la última modificación se mostrará al inicio del documento.
 
