--- a/src/content/legal/terms-and-conditions.mdx
+++ b/src/content/legal/terms-and-conditions.mdx
@@ -20,18 +20,26 @@ El uso que hagas de la información contenida en este blog es tu responsabilidad
 
 **El consumo de bebidas alcohólicas debe hacerse con moderación y responsabilidad.** Este sitio no promueve el consumo excesivo ni irresponsable de alcohol.
 
-### 3. Comentarios y participación
+### 3. Edad mínima
+
+El uso de este sitio web está reservado exclusivamente a personas que hayan alcanzado la mayoría de edad legal para el consumo de bebidas alcohólicas, según la legislación aplicable en su país de residencia.
+
+Al acceder y utilizar Agítalo Suave, declaras y garantizas que tienes la edad legal correspondiente. Si no cumples con este requisito, debes abstenerte de utilizar el sitio o interactuar con su contenido.
+
+El autor no se hace responsable por el acceso indebido de menores de edad a este sitio ni por el uso inapropiado de la información que contiene.
+
+### 4. Comentarios y participación
 
 Si en el futuro se habilitan comentarios o formularios de participación, se espera que el usuario se exprese con respeto. Se eliminarán los mensajes ofensivos, discriminatorios o que infrinjan la ley.
 
-### 4. Enlaces a terceros
+### 5. Enlaces a terceros
 
 Este sitio puede contener enlaces a otras webs. No tengo control sobre el contenido o las políticas de esos sitios, y no asumo responsabilidad por lo que ocurra fuera de este dominio.
 
-### 5. Modificaciones
+### 6. Modificaciones
 
 Puedo actualizar estos términos en cualquier momento. La fecha de la última modificación siempre estará visible al inicio del documento. Se recomienda revisarlos periódicamente.
 
-### 6. Contacto
+### 7. Contacto
 
 Si tienes dudas sobre estos términos, puedes contactarme a través del formulario de contacto del sitio.
